# WLM-Metacognition-Engine

./: README.md  pyproject.toml
docs/: api.md  metacognition-rules.md  overview.md  roadmap.md
examples/: contradiction.md  dimension_switch.md  simple_reasoning.md
src/wlm_metacognition_engine/: __init__.py  api.py  cli.py  consistency_engine.py  dimension_tracker.py  graph_builder.py  reasoning_extractor.py  signal_engine.py
wlm-metacognition-engine/tests/: test_cli.py  test_consistency.py  test_dimensions.py  test_end_to_end.py  test_extractor.py  test_graph_builder.py  test_signals.py
